# vm

./: Dockerfile  README.md  cbc_solver.py  cp_solver.py  pyproject.toml  solver_old.py
app/: __init__.py  db.py  limiter.py  models.py
app/routes/: auth.py  optimize.py  swimmers.py
app/services/: optimizer.py  pb_utils.py  swimrankings.py
app/templates/: base.html
app/templates/auth/: account.html  login.html  register.html
app/templates/optimize/: index.html
app/templates/swimmers/: _pb_row.html  _row.html  edit.html  list.html  main.html  new.html
optimizer/: lineup.py
