[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vereinsmeisterschaft"
version = "0.1.0"
description = "Flask app for swim lineups and optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.0,<4",
  "Flask-Login>=0.6",
  "Flask-SQLAlchemy>=3",
  "SQLAlchemy>=2.0",
  "Flask-WTF>=1.2",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "ortools>=9.9",
  "gunicorn>=21",
  "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

