[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "vereinsmeisterschaft"
version = "0.1.0"
description = "Flask app for optimal swim lineups"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3,<4",
  "Flask-Login>=0.6",
  "Flask-SQLAlchemy>=3",
  "SQLAlchemy>=2",
  "Flask-WTF>=1.2",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "ortools>=9.9",
  "gunicorn>=21",
  "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
